fix: fix slider buttons on small screens

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -55,14 +55,14 @@
     justify-content: center;
 
     @include for-desktop {
-      top: 12%;
+      top: 18%;
       position: absolute;
       width: 32px;
       height: 32px;
       background-color: $white-color;
     }
 
- 
+
 
     &-left {
       left: 1%;
